--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,32 @@
 ---
-title: Hello World
-description: Your first document
+title: "Introduction"
+description: "A brief overview of Email Armor and its features!"
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+# What is Email Armor?
 
-## What is Next?
+**Email Armor** is a powerful npm module designed for **Node.js** and **Next.js**, providing a secure and flexible authentication system with built-in **two-step verification** via **Nodemailer** (using GMAIL). The package also includes a robust referral system to encourage user engagement and growth. Currently, it supports **MongoDB** as the only database.
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
-</Cards>
+For a quick start, check out this [SDK](https://github.com/Capta1nRaj/email-armor-docs), where **Email Armor** has been seamlessly integrated with **Next.js**. You can clone the repository to jump-start your project with a pre-configured environment.
+
+---
+
+## Features in v1
+
+✅ **Next.js & Node.js compatibility**  
+✅ **Customizable mail templates** (dynamic content)  
+✅ **Resend OTP with rate limiting**  
+✅ **Reset password with two-step verification**  
+✅ **Local and server-side session validation**  
+✅ **Built-in referral system**  
+✅ **Referral history tracking**
+
+---
+
+## Upcoming Features
+
+❌ **Sign-in with two-step verification**  
+❌ **Profile picture management (add/remove)**  
+❌ **Change email and password functionality**  
+❌ **Account lock after multiple failed login attempts with email notification**  
+❌ **Unlock user account (manual/automatic options)**
